force-app/main/default/objects/Time_Entry__c/fields/Date_Incurred__c.field-meta.xml
<CustomField>
    <fullName>Date_Incurred__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Incurred</label>
    <required>true</required>
    <type>Date</type>
</CustomField>