force-app/main/default/objects/Time_Entry__c/fields/Incurred_By__c.field-meta.xml
<CustomField>
    <fullName>Incurred_By__c</fullName>
    <label>Incurred By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Developer</valueSetName>
    </valueSet>
</CustomField>