force-app/main/default/objects/Time_Entry__c/fields/System_Request__c.field-meta.xml
<CustomField>
    <fullName>System_Request__c</fullName>
    <label>System Request</label>
    <referenceTo>System_Request__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>