force-app/main/default/objects/Time_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Incurred__c</columns>
    <columns>Duration__c</columns>
    <columns>Description__c</columns>
    <columns>System_Request__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>